[package]
name = "elastic_monitor_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] } 
dotenv = "0.15.0"
flexi_logger = "0.27.4"
log = "0.4.20"
chrono = "0.4.31"
anyhow = "1.0.79"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }