[package]
name = "elastic_monitor_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] } 
flexi_logger = "0.27.4"
log = "0.4.20"
chrono = "0.4.31"
anyhow = "1.0.79"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
elasticsearch = "8.4.0-alpha.1"
getset = "0.1.2"
derive-new = "0.6.0"
futures = "0.3.30"
lazy_static = "1.5.0"
async-trait = "0.1.83"